--- a/CrudeOiland.Rmd
+++ b/CrudeOiland.Rmd
@@ -85,13 +85,13 @@ Heating oil is used to heat homes in the Northeast U.S., whereas in other parts 
 
 # Historical Price Trends
 
-The following figure shows WTI and Brent monthly spot prices from May 1987 to October 2015. 
+The following figure shows WTI and Brent monthly spot prices from May 1987 to September 2016. 
 
 ![WTI and Brent Prices May 1987 to Oct. 2015](Excel-files/CrudeOiland-crudeoil_files/image003.png)
 
 Prices experienced a dramatic uptrend then downtrend in 2008-2009 that was experienced across many commodities. Most recently, crude oil prices have been in a severe downturn. The recent downtrend has been characterized by a historically unprecedented divergence between WTI and Brent crude oil prices. 
 
-![Brent - WTI Price Spread](Excel-files/CrudeOiland-crudeoil_files/image005.png)
+![Brent - WTI Price Spread](Excel-files/CrudeOiland-crudeoil_files/image008.png)
 
 Recall that WTI is a North American benchmark for light sweet crude oil, while Brent is a European benchmark for light sweet crude oil. In the next section we will discuss how rapidly increasing production in the U.S. Bakkan formation of North Dakota has contributed to weak price levels and historically weak WTI price compared to the Brent price. 
 
@@ -119,6 +119,8 @@ Source: ["Bakken Wells 2013" by US Geological Survey](https://commons.wikimedia.
 ## Inventories of Crude, Gasoline, and Distillates
 
 The figure below shows weekly U.S. ending stocks of Crude oil in thousands of barrels. You can see a dramatic spike in stocks starting at the beginning of 2015. This supply glut culminated in the weak prices over the summer. An export ban on U.S. crude oil makes the effect even stronger.
+
+![U.S. Ending Stocks of Crude Oil (Thousand Barrels)](Excel-files/CrudeOiland-crudeoil_files/image007.png)
 
 ## Geopolitical Events
 
