--- a/05-PricesSpaceTime.Rmd
+++ b/05-PricesSpaceTime.Rmd
@@ -72,7 +72,7 @@ Now, just to illustrate how the forward curve changed between August and Decembe
 
 ## Forward Curve Cases with Hypothetical Data
 
-When prices move up or down, the front end of the forward curve generally is more responsive than the back end of the forward curve. We will illustrate this with both increasing prices and decreasing prices. The examples below show the first five contracts on the forward curve plotted on four consecutive days of price changes in one direction. The price data in these examples are hypotheticul, but represent what usually happens to the forward curve when prices increase or decrease.
+When prices move up or down, the front end of the forward curve generally is more responsive than the back end of the forward curve. We will illustrate this with both increasing prices and decreasing prices. The examples below show the first five contracts on the forward curve plotted on four consecutive days of price changes in one direction. The price data in these examples are hypothetical, but represent what usually happens to the forward curve when prices increase or decrease.
 
 **Prices Increasing**
 
@@ -83,10 +83,10 @@ library(tidyr)
 library(ggplot2)
 
 xaxis <- c('Dec', 'March', 'May', 'July', 'Sept')
-day1 <- c('day1', 'day1', 'day1', 'day1', 'day1')
-day2 <- c('day2', 'day2', 'day2', 'day2', 'day2')
-day3 <- c('day3', 'day3', 'day3', 'day3', 'day3')
-day4 <- c('day4', 'day4', 'day4', 'day4', 'day4')
+day1 <- c('day 1', 'day 1', 'day 1', 'day 1', 'day 1')
+day2 <- c('day 2', 'day 2', 'day 2', 'day 2', 'day 2')
+day3 <- c('day 3', 'day 3', 'day 3', 'day 3', 'day 3')
+day4 <- c('day 4', 'day 4', 'day 4', 'day 4', 'day 4')
 day1p <- as.numeric(c(350, 360, 369, 375, 378))
 day2p <- as.numeric(c(355, 364, 372, 377, 379))
 day3p <- as.numeric(c(360, 367, 374, 378, 380))
@@ -111,7 +111,56 @@ g <- ggplot(df, aes(xaxis, price, colour= day)) + ylim(300,425) + theme_bw() +
 g
 ```
    
-Figure 6. Prices Increasing, Contango to backwardation
+Figure 6. Forward Curve with Prices Increasing, Contango to backwardation
+
+On day 1, the market is clearly in contango, as the forward curve is upward sloped. As time moves from day 1 through day 4 prices are rising each day, with the front end of the forward curve exhibiting the largest changes each day. On day 4, prices have risen enough that the market is now in backwardation with the front month higher than the first deferred. 
+
+
+**Prices Decreasing**
+
+
+
+```{r, echo = FALSE, message = FALSE, warning=FALSE}
+library(tidyr)
+library(ggplot2)
+
+xaxis <- c('Dec', 'March', 'May', 'July', 'Sept')
+day1 <- c('day 1', 'day  1', 'day 1', 'day 1', 'day 1')
+day2 <- c('day 2', 'day 2', 'day 2', 'day 2', 'day 2')
+day3 <- c('day 3', 'day 3', 'day 3', 'day 3', 'day 3')
+day4 <- c('day 4', 'day 4', 'day 4', 'day 4', 'day 4')
+day1p <- as.numeric(c(350, 360, 369, 375, 378))
+day2p <- as.numeric(c(342, 354, 366, 372, 377))
+day3p <- as.numeric(c(332, 346, 360, 368, 374))
+day4p <- as.numeric(c(327, 341, 355, 363, 369))
+
+day1 <- cbind(xaxis, day1, day1p)
+day2 <- cbind(xaxis, day2, day2p)
+day3 <- cbind(xaxis, day3, day3p)
+day4 <- cbind(xaxis, day4, day4p)
+df <- rbind(day1, day2, day3, day4)
+df <- as.data.frame(df)
+colnames(df) <- c('xaxis', 'day', 'price')
+df$xaxis <- factor(df$xaxis, levels = df$xaxis[order(df$price)])
+df$price <- as.numeric(as.character(df$price))
+g <- ggplot(df, aes(xaxis, price, colour= day)) + ylim(300,425) + theme_bw() +
+        geom_point() + geom_line(aes(group = day)) +
+        scale_color_manual(values = c("darkblue", "darkblue", "darkblue", "darkblue", "darkblue")) +
+        labs(x = "", y = "Price cents per bushel") + 
+        geom_text(aes(label= ifelse(xaxis == "Dec", as.character(day), '')),hjust=1.5, vjust=0) + 
+        theme(legend.position = "none")
+       
+g
+```
+   
+Figure 7. Forward Curve with Prices Decreasing 
+
+On day 1 the market is in contango in this example as well. As time progresses from day 1 to day 4, prices are falling. From day 1 to day 3 the forward curve is getting steeper because price declines in Dec are larger than the price declines in March. In turn, the price declines in March are larger than the price declines in May, and do on. This indicates that from day 1 to day 3, the market is not yet at full carry; as prices are declining, the returns to storage keep increasing (reflected by the steeper forward curve). From day 3 to day 4, however, we can see that the market is at full carry because the price decline is constant all the way up the forward curve. Even though prices continue to fall, the market is already offering enough incentive to store to cover storage costs, so the price differences between contracts cannot widen any further. 
+
+**Some Caveats**
+
+The effect of price changes on the shape of the forward curve as described above is typically observed. However, there is nothing requiring the market to react exactly this way, and there can be fundamental changes in the market (perhaps a major demander of the commodity reduces or increases consumption during a specific time of the year) that affect parts of the forward curve more than others. This could cause a larger price change in the middle or back end of the forward curve. Usually though, the front end of the forward curve will be more volatile than the back end of the forward curve as depicted in figures 6 and 7. 
+
 
 ## Calendar Spreads  
 
