--- a/05-PricesSpaceTime.Rmd
+++ b/05-PricesSpaceTime.Rmd
@@ -175,11 +175,11 @@ We discussed at the beginning of this chapter that one of the costs of storage t
 $$Financial \text{  } Full \text{  } Carry  = ndays(\frac{i}{360}*F + P)$$ 
 
 
-where $ndays =$ the number of days between the first delivery day in the nearby contract and the first delivery day in the deferred contract. $i =$ the three month LIBOR interest rate + 200 basis points,[^simpleinterest] $F =$ futures price, and $P =$ the current premium charge on shipping certificates. For example, there are 90 days between delivery period of the December contract and the delivery period of the March contract. If the LIBOR rate is 3%, the corn futures price is \$3.50 per bushel, and the premium charge on shipping certificates is 0.165 cents per bushel per day, then financial full carry is:
+where $ndays =$ the number of days between the first delivery day in the nearby contract and the first delivery day in the deferred contract. $i =$ the three month LIBOR interest rate + 200 basis points,[^simpleinterest] $F =$ futures price, and $P =$ the current premium charge on shipping certificates. For example, there are 90 days between delivery period of the December contract and the delivery period of the March contract. If the LIBOR rate is .3% and financing costs are 200 basis points above LIBOR, the corn futures price is \$3.50 per bushel, and the premium charge on shipping certificates is 0.165 cents per bushel per day, then financial full carry is:
 
 [^simpleinterest]: The CME Group uses simple interest to calculate the financial full carry in other contexts, so we adopt it here for our definition of financial full carry. 
 
-$$Financial \text{  } Full \text{  } Carry = 90*(0.032/360*3.50 + 0.165 = 14.878 \text{ cents per bushel}) $$
+$$Financial \text{  } Full \text{  } Carry = 90*(0.023/360*350 + 0.165 = 16.86 \text{ cents per bushel}) $$
 
 Then financial full carry between the December contract and the March contract would be 14.878 cents. It is called financial full carry because in theory, the spread between the December and March contracts cannot be wider than this amount. If it were wider, say 30 cents, then a storage arbitrage would be possible. You could buy a December futures contract and sell a March futures contract, take delivery of December contract, receive the shipping certificate and hold it until March 1st at a cost to you of 14.878 cents per bushel. Then use the shipping certificate to deliver on your short March futures position. Your futures trades just earned 30 cents, while holding the shipping certificate only cost 14.878 cents, leaving you with a profit of 15.123 cents per bushel.    
 
