--- a/10-ForecastingUseSoy.Rmd
+++ b/10-ForecastingUseSoy.Rmd
@@ -46,7 +46,23 @@ Figure 5 shows soybean exports as a percent of total supply from 1980-2014. Simi
 
 Source: [USDA ERS Oil Crops Yearbook](http://www.ers.usda.gov/data-products/oil-crops-yearbook.aspx)
 
-*Main Exporters table here.*  
+
+: Table 1: Top 10 Importers of U.S. Soybeans 2012/2013 through 2016/2017 Marketing Years, Ranked in Descending Order for Marketing Year 2016/2017 (1,000 Metric Tons)
+
+```{r, echo=FALSE, warning=FALSE}
+library(Kmisc)
+library(knitr)
+corn_importers <- read.csv('Excel-files/ForecastingUseof-soy_importers.csv', header = TRUE)
+kable(corn_importers, align = 'l',  col.names = c("COUNTRY", "EXPORTS 2016/2017", 	"RANK",	"EXPORTS 2015/2016",	"RANK",	
+                                                              "EXPORTS 2014/2015",	"RANK",	"EXPORTS 2013/2014", "RANK"))
+
+```
+
+Source: [USDA FAS](http://apps.fas.usda.gov/export-sales/myrk_rpt.htm)  
+
+Clearly China is the dominant importer of U.S. soybeans. They buy 10 times more than 2nd ranked Mexico. Examining the short history in table 1, you can see that increasing exports of soybeans to China accounts for nearly all of the uptrend in figure 4. In the 2016/2017 marketing year China was the destination of over 60% of U.S. soybean exports.  
+
+
 
 ## Feed, Seed, and Residual
 
@@ -66,7 +82,8 @@ Source: [USDA ERS Oil Crops Yearbook](http://www.ers.usda.gov/data-products/oil-
 
 Soybeans are a bit different from corn because there are only two use categories that are important, crush and exports. The soybean use categories historically have been reliably 50% crush and 50% exports as a percent of supply. In recent years, exports have been increasing both nominally and as a percent of supply. So forecasting demand for soybeans has largely become a matter of forecasting soybean exports. 
 
-Recently, with the rise of South American soybean (and corn) production forecasting exports is a matter of balancing the price of U.S soybeans compared with the price of South American soybeans and the raw demand from our trading partners. China has become the major player in this space, accounting for most of the recent increase in U.S. soybean exports. Exports of U.S. soybeans to China now make up roughly half of all U.S. soybeans exported. 
+Recently, with the rise of South American soybean (and corn) production, forecasting exports is a matter of balancing the price of U.S soybeans compared with the price of South American soybeans and the raw demand from our trading partners. China has become the major player in this space, as is evident in table 1.  
+
 
 ## Forecasting Use of Soybeans
 
