--- a/12-A-South-American-Production.Rmd
+++ b/12-A-South-American-Production.Rmd
@@ -1,3 +1,25 @@
 # South American Production
 
-More coming soon...
+Introduction
+
+- Show increasing rise in prominance of South american production and exports of corn and soybeans
+
+- Map of south america highlighting Brazil, Argentina, Paraguay, and Bolivia, as biggest players on world stage
+
+- Level and percent figures for corn and soybeans
+
+# South American Production Seasons
+
+
+## Brazil
+
+Importance of double cropping
+
+## Argentina
+
+More similar to U.S. in lattitude, so single crop.
+
+## Seasonal production and World trade flows
+
+
+
