--- a/12-A-South-American-Production.Rmd
+++ b/12-A-South-American-Production.Rmd
@@ -1,6 +1,10 @@
 # South American Production
 
-Over the last twenty years Brazil and Argentina have grown in prominence on the world stage and are currently among the most important growers of soybeans and corn, particularly so for soybeans. 
+
+
+Over[^thanks] the last twenty years Brazil and Argentina have grown in prominence on the world stage and are currently among the most important growers of soybeans and corn, particularly so for soybeans. 
+
+[^thanks]: Many thanks to Felipe Grimaldi Avileis, my teaching assistant for ACE 427 in 2017, for getting me up to speed on the basics of production in South America, and for showing me where to access supply and demand reports for Brazil and Argentina. 
 
 In figure 1 we have plotted the production since 1990 of the world's top five producers of corn. Argentina, Brazil, China, the European Union, and the United States round out this group. A clear pattern of increases over time is notable particularly for the U.S., China, and Brazil, generating a dramatic upward trend in the production from this top group. 
 
@@ -265,4 +269,37 @@ Planting of soybeans begins in November and harvest runs from April to May.
 
 ![Figure 10: Regional Argentinian Soybean Production Seasons](images\argentina-soy-1.png)
 
+### Where to find information
 
+For information about Brazillian production the [National Supply Company (Conab)](http://www.conab.gov.br/index.php) is the main resource. They publish crop reports monthly, just like the USDA's WASDE report. Typically, the Brazillian report is released a couple of days before the WASDE report, so if there is information from Brazil that will affect world stocks or production, these reports will move prices in the U.S. 
+
+A calendar of release dates for 2016/2017 and 2017/2018 marketing years is found [here](http://www.conab.gov.br/OlalaCMS/uploads/arquivos/17_04_13_10_16_02_calendario_safras_2017_para_site-1.pdf). Note that [Google Translate](https://translate.google.com/?tr=f&hl=en) is helpful here. Click *Choose File*, and paste the URL of any .pdf produced by CONAB. 
+
+The monthly crop reports can be found on the [Conab website](http://www.conab.gov.br/index.php). Ask Google to automatically translate the page to English for you. Navigate through the *Produtos e Servicos* menu, through *Crops*, and choose *Harvesting Safra*. 
+
+This brings up a list of reports listed in reverse chronological order by release date. Look for a row of the form **1st Survey - Harvest 2017/2018-Grains**. In the product column will be **Food**. They three kinds of reports, Food (which contains grains and oilseeds like corn and soybeans), Coffee, and Sugar Cane. Since the food report is released once per month, the most recent report should always appear on the first page of the table. 
+
+**Area Planted**
+
+on p 98, table 36 Estimates are given for Planted area. Taking from the October 2017 report. Decimals are marked with ',' and 1,000's are marked with '.' - just the opposite of the convention of most English-speaking traditions. 
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE, rows.print = 100}
+
+name <- 	c("Regions", "Area-Safra-16/17",	"Area-Safra-17/18-Low", "Area-Safra-17/18-High",	
+      "Perc-Change-from-16-Low", "Perc-Change-from-16-High", "Yield-Safra-16/17",	"Yield-Safra-17/18", 	
+      "Perc Change-from-16", "Production-Safra-16/17",	"Production-Safra-17/18-Low", 
+	    "Production-Safra-17/18-High",	"Perc-Change-from-16-Low", "Perc-Change-from-16-High"	)
+
+
+latest   <- read.csv('Excel-files/brazil-oct17-conab.csv', header = FALSE, col.names = name)
+
+
+latest
+
+```
+
+From the table we learn that soybean plantings are up about 2.7% (1.6% - 3.8% low to high range), but yields are expected to decrease by 8.6%. This leaves productino estimates for the 2017/2018 crop in the range of  -7.1% to -5.1%. 
+
+## Exercises 
+
+1. Use Tabula to extract Conab report data from pdf. 
