--- a/12-TheSoybeanCrush.Rmd
+++ b/12-TheSoybeanCrush.Rmd
@@ -80,9 +80,33 @@ So, adjusting equation 2. we get the expression for the **Crush Spread**.
 and this represents the **Gross Processing Margin** (GPM) for the soybean crushing plant. This spread is followed by industry participants as a gauge of profitability in the industry and as a signal of whether to expect expansion or contraction in the crush business. 
 
 
-![Figure 1: Gross Processing Margin Using Nearby Contracts for Soybean Oil, Meal, and Soybeans as of 10/11/2016](images/barchart_crush_spread.png)
+```{r, echo=FALSE, warning=FALSE, message=FALSE, rows.print = 100, cols.print = 6}
 
-Source: [Barchart.com](www.Barchart.com)
+library(ggplot2)
+library(xts)
+name <- c("Date", "Beans", "Oil", "Meal")
+
+data <- read.csv('Excel-files/soy-crush.csv', header = FALSE, col.names = name, colClasses = c("character", "numeric", "numeric", "numeric"))
+
+data <- as.xts(data[,-1], order.by = as.POSIXct(data$Date), format = "%d/%m/%Y")
+
+crush_spread <- data$Oil*11/100 + data$Meal*0.022 - data$Beans/100
+
+crush_spread[!is.na(crush_spread) & crush_spread >1.2] <- NA
+
+plot(diff(crush_spread))
+
+g <- autoplot(crush_spread) + theme_bw() +  
+      theme(axis.title.x = element_blank()) +   # Remove x-axis label
+      ylab("GPM $/bushel") + 
+      scale_fill_brewer(palette = 'Accent')  +
+      ggtitle("Figure 1: GPM of Soybean Crushing using Nearby Contracts")
+
+g
+
+```
+
+Source: [Quandl.com](www.Quandl.com)
 
 
 ## The Board Crush
