--- a/book.bib
+++ b/book.bib
@@ -135,3 +135,11 @@ publisher={CreateSpace Independent Publishing Platform}
   year={2002},
   publisher={National Academies Press}
 }
+
+
+@techreport{usitctrade,
+  title={Pork and Swine Industry and Trade Summary},
+  author={Giamalva, John},
+  year={2014},
+  institution={United States International Trade Commission}
+}
