--- a/book.bib
+++ b/book.bib
@@ -58,6 +58,8 @@ publisher={CreateSpace Independent Publishing Platform}
   publisher={Elsevier}
 }
 
+
+
 @article{hocking1976biometrics,
   title={A Biometrics invited paper. The analysis and selection of variables in linear regression},
   author={Hocking, Ronald R},
@@ -142,4 +144,16 @@ publisher={CreateSpace Independent Publishing Platform}
   author={Giamalva, John},
   year={2014},
   institution={United States International Trade Commission}
+}
+
+@techreport{usdacensus,
+  title={Hog and Pig Farming: A $22.5 Billion Industry},
+  year={2014},
+  institution={United States Department of Agriculture}
+}
+
+@techreport{gipsa10,
+  title={2010 Annual Report: Packers and Stockyards Program},
+  year={2011},
+  institution={United States Department of Agriculture, Grain Inspection, Packers, and Stockyards Administration}
 }
