--- a/book.bib
+++ b/book.bib
@@ -157,3 +157,9 @@ publisher={CreateSpace Independent Publishing Platform}
   year={2011},
   institution={United States Department of Agriculture, Grain Inspection, Packers, and Stockyards Administration}
 }
+
+@techreport{eugestation,
+  title={Council Directive 2008/120/EC},
+  year={2008},
+  institution={Council of the European Union}
+}
